<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background_gradient"
    android:orientation="vertical" >

    <com.ifgi.klimastationms.views.FontableTextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/introduction_title"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizeLarge"
        app:font="SourceSansPro-Light.ttf" />

    <com.ifgi.klimastationms.views.FontableTextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/introduction_message_top"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizePrimary"
        app:font="SourceSansPro-Regular.ttf" />

    <ImageView
        android:id="@+id/dataImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_description_introduction_data"
        android:src="@drawable/phone_data" />

    <ImageView
        android:id="@+id/graphImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_description_introduction_graph"
        android:src="@drawable/phone_graph" />

    <com.ifgi.klimastationms.views.FontableTextView
        android:id="@+id/welcomeTextViewTwo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataImageView"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/introduction_message_bottom"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizePrimary"
        app:font="SourceSansPro-Regular.ttf" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
            android:shadowColor="@color/textShadow"
            android:shadowDx="@dimen/shadowOffsetX"
            android:shadowDy="@dimen/shadowOffsetY"
            android:shadowRadius="@dimen/shadowRadius"
        android:background="@color/clear"
        android:text="@string/introduction_start_button"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizeLarge" />

</RelativeLayout>