<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background_gradient"
    android:orientation="vertical" >

    <com.ifgi.klimastationms.views.FontableTextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/app_name"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizeLarge"
        app:font="SourceSansPro-Light.ttf" />

    <com.ifgi.klimastationms.views.FontableTextView
        android:id="@+id/descriptionTextViewTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/about_top_description"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizePrimary"
        app:font="SourceSansPro-Regular.ttf" />

    <RelativeLayout
        android:id="@+id/buttonRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/logoLayoutHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/descriptionTextViewTop" >

        <ImageButton
            android:id="@+id/imageButtoniLoek"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/middleView"
            android:adjustViewBounds="true"
            android:background="@color/clear"
            android:contentDescription="@string/about_institute_name"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_ilok" />

        <View
            android:id="@+id/middleView"
            android:layout_width="@dimen/listViewRowMiddleViewWidth"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@color/clear" />

        <ImageButton
            android:id="@+id/imageButtonKli"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/middleView"
            android:adjustViewBounds="true"
            android:background="@color/clear"
            android:contentDescription="@string/about_klima_ag_name"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_kli" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRelativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/graphGridColor"
        android:padding="15dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/about_button_station"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizeTitle" />

    <Button
        android:id="@+id/buttonLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/graphGridColor"
        android:padding="15dp"
        android:shadowColor="@color/textShadow"
        android:shadowDx="@dimen/shadowOffsetX"
        android:shadowDy="@dimen/shadowOffsetY"
        android:shadowRadius="@dimen/shadowRadius"
        android:text="@string/about_button_license"
        android:textColor="@color/textMain"
        android:textSize="@dimen/textSizeTitle" />

</RelativeLayout>